--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     // retrofit
-    implementation 'com.squareup.retrofit:retrofit:2.0.0-beta1'
-    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
 
     testImplementation 'junit:junit:4.12'
